Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18070

sanity test_103a: FAIL: run_acl_subtest 'misc' failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • Ubuntu 24.04 client
      SLES 15 SP6 client
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/53afc141-49e3-4248-b791-db7fd0dc3212

      test_103a failed with the following error:

                             
      [413] $ chmod 750 d -- ok
      [414] $ ls -dl d | awk '{print $1}' -- ok
      [417] $ getfacl --omit-header d -- failed
      user::rwx                             | user::rwx                              
      user:bin:r-x                          | user:bin:r-x                           
      user:daemon:rwx	#effective:r-x        | user:daemon:rwx	#effective:r-x         
      group::rwx	#effective:r-x             | group::rwx	#effective:r-x              
      mask::r-x                             | mask::r-x                              
      other::---                            | other::---                             
      default:user::rwx                     | default:user::rwx                      
      default:user:bin:r-x                  | default:user:bin:r-x                   
      default:user:daemon:rwx               ? default:user:daemon:rwx	#effective:r-x 
      default:group::rwx                    ? default:group::rwx	#effective:r-x      
      default:mask::rwx                     ? default:mask::r-x                      
      default:other::r-x                    ? default:other::---                     
                                            |                                        
      [432] $ rmdir d -- ok
      103 commands (95 passed, 8 failed)
       sanity test_103a: @@@@@@ FAIL: run_acl_subtest 'misc' failed
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/106363 - 6.4.0-150600.23.14-default
      servers: https://build.whamcloud.com/job/lustre-reviews/106363 - 5.14.0-362.24.1_lustre.el9.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_103a - run_acl_subtest 'misc' failed

            sebastien Sebastien Buisson
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: